[package]
name = "primer-gui"
description = "Tauri desktop UI for testing and monitoring The Primer's Socratic dialogue"
version.workspace = true
edition.workspace = true

[[bin]]
name = "primer-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
# Tauri runtime. `wry` is the default-included WebView; we pin the
# default-features OFF at the workspace level and re-enable here to
# keep the surface explicit. Without `wry` the Builder can't infer
# its Runtime type parameter.
tauri = { workspace = true, features = ["wry"] }

# JSON serialisation for GuiConfig + frontend DTOs.
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

# Structured logging for the same RUST_LOG=… surface the CLI exposes.
# Without this, tracing::warn! calls inside the pedagogy/inference
# stack disappear silently when the GUI drives them.
tracing.workspace = true
tracing-subscriber.workspace = true

# Shared engine wiring + pedagogy stack the GUI drives.
primer-engine.workspace = true
primer-core.workspace = true
primer-pedagogy.workspace = true
primer-knowledge.workspace = true
primer-storage.workspace = true
primer-kb-load.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
primer-embedding.workspace = true
primer-inference = { path = "../primer-inference" }

# Voice mode — opt-in via the `speech` feature. Pulls every speech backend
# feature so the GUI binary can drive VAD → STT → DialogueManager → TTS
# → cpal without further conditional compilation. Mirrors primer-cli's
# `speech` feature.
reqwest = { workspace = true, features = ["stream"], optional = true }
primer-speech = { path = "../primer-speech", optional = true }
# Used by the streaming voice-asset download to poll reqwest's bytes_stream.
# Gated on `speech` because that's the only feature that activates
# voice/download.rs.
futures = { workspace = true, optional = true }

tokio.workspace = true
uuid.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile.workspace = true
# Compile-time trait-bound assertions. Used to pin the IPC-direction
# invariant that `MissingAsset` does NOT implement `Deserialize` — see
# the static_assertions::assert_not_impl_any! call in
# commands/voice.rs::tests.
static_assertions = "1"

[features]
# Hybrid retrieval is default-on, mirroring primer-cli. A fresh
# `gui-config.json` defaults the embedder to fastembed (see
# EmbedderConfig::default in config.rs); an existing config keeps whatever
# the user stored. A `--no-default-features` build drops to BM25-only.
default = ["embedding"]

# Hybrid retrieval via fastembed-rs (BGE-M3). Mirrors primer-cli's flag
# so the GUI can opt in independently. Forwards through to primer-engine
# for the cfg-gated dispatch arms.
embedding = ["primer-engine/embedding"]

# Lightweight Ollama-backed embedder.
ollama-embedding = ["primer-engine/ollama-embedding"]

# OpenAI-compatible embedding server (oMLX, LM Studio, vLLM, …). Mirrors
# primer-cli's flag so the GUI can opt in independently; plumbs through
# to primer-engine for the cfg-gated `build_openai_compat_embedder` arm.
openai-compat-embedding = ["primer-engine/openai-compat-embedding"]

# Qualcomm NPU inference backend (Phase 1.2). Forwards to
# `primer-engine/qnn` so the `QnnBackend` lands in the GUI's dep graph and
# `build_qnn_backend`'s real arm constructs. WITHOUT this feature the QNN
# option is still selectable in Settings (the bundle/QAIRT-lib paths are
# always-present config fields), but selecting it surfaces the "rebuild
# with --features qnn" hint inline — mirroring the openai-compat-embedding
# error-inline pattern. Android target only at runtime.
qnn = ["primer-engine/qnn"]

# Embedded llama.cpp inference backend (Phase 1.1). Forwards to
# `primer-engine/llamacpp` so the `LlamaCppBackend` lands in the GUI's
# dep graph and `build_llamacpp_backend`'s real arm constructs. WITHOUT
# this feature the llamacpp option is still selectable in Settings (the
# GGUF path / gpu-layers / n_ctx config fields are always-present), but
# selecting it surfaces the "rebuild with --features llamacpp" hint
# inline — mirroring the qnn pattern. The `-metal` / `-cuda` / `-vulkan`
# variants enable the corresponding GPU acceleration backend.
llamacpp = ["primer-inference/llamacpp", "primer-engine/llamacpp"]
llamacpp-metal = ["primer-inference/llamacpp-metal", "primer-engine/llamacpp-metal"]
llamacpp-cuda = ["primer-inference/llamacpp-cuda", "primer-engine/llamacpp-cuda"]
llamacpp-vulkan = ["primer-inference/llamacpp-vulkan", "primer-engine/llamacpp-vulkan"]

# Voice mode — pulls every speech backend feature so the GUI binary can
# drive the LISTEN → LATENT_THINK → SPEAK → LISTEN state machine end-to-
# end. Also pulls reqwest for streaming asset downloads (PR 4).
speech = [
    "primer-speech/silero",
    "primer-speech/whisper",
    "primer-speech/piper",
    "primer-speech/cpal",
    "primer-speech/voice-loop",
    "dep:reqwest",
    "dep:primer-speech",
    "dep:futures",
]

# Supertonic 3 TTS as a Settings → Speech TTS choice. Additive to `speech`
# (forwards to primer-speech/supertonic). Hindi / Japanese unlock — #170.
supertonic = ["speech", "primer-speech/supertonic"]

# macOS-native speech backends (SFSpeechRecognizer + AVSpeechSynthesizer).
# Combine with `speech` for an Apple-native voice loop. No effect on
# non-macOS builds. See docs/macos_native_speech.md.
macos-native = ["primer-speech/macos-native"]
macos-native-26 = ["primer-speech/macos-native-26"]
