[package]
name = "primer-inference"
description = "LLM inference backends for the Primer"
version.workspace = true
edition.workspace = true

[dependencies]
primer-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
chrono.workspace = true

# llama.cpp bindings — uncomment when integrating:
# llama-cpp-2 = "0.1"
