[package]
name = "primer-inference"
description = "LLM inference backends for the Primer"
version.workspace = true
edition.workspace = true

[features]
default = []

# Qualcomm NPU backend (Phase 1.2). Adds the `qnn` module re-exporting
# `QnnBackend`, plus the Genie FFI scaffold from `primer-qnn-sys` and the
# `minijinja` chat-template renderer. Disabled by default so desktop CI
# and non-Android consumers stay light. Selecting this on a non-Android
# host compiles fine — `QnnBackend::new` returns a typed error at runtime
# via the `primer-qnn-sys` `PlatformUnsupported` path, exactly the shape
# step 1.2.4 will need for the `--backend qnn` CLI flag.
qnn = ["dep:primer-qnn-sys", "dep:minijinja"]

# Embedded llama.cpp inference (Phase 1.1). Adds the `RealLlamaEngine`
# body behind `LlamaCppBackend`. Non-default — compiles llama.cpp (C++),
# so default builds and CI stay light. The backend type, the LlamaEngine
# trait, the mock, and the pure helpers all compile WITHOUT this feature;
# only the real engine's llama-cpp-2 calls are gated.
llamacpp = ["dep:llama-cpp-2", "dep:encoding_rs"]
# GPU passthrough — forward to llama-cpp-2's own backend features.
llamacpp-metal = ["llamacpp", "llama-cpp-2/metal"]
llamacpp-cuda = ["llamacpp", "llama-cpp-2/cuda"]
llamacpp-vulkan = ["llamacpp", "llama-cpp-2/vulkan"]

[dependencies]
primer-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true
tracing.workspace = true
thiserror.workspace = true

# Optional — only pulled when the `qnn` feature is enabled.
primer-qnn-sys = { workspace = true, optional = true }
minijinja = { workspace = true, optional = true }

# Optional — only pulled when the `llamacpp` feature is enabled.
llama-cpp-2 = { workspace = true, optional = true }
# `token_to_piece` needs an `encoding_rs::Decoder`; this is also a transitive
# dep of llama-cpp-2 0.1.146, so the version aligns naturally.
encoding_rs = { version = "0.8", optional = true }

[dev-dependencies]
chrono.workspace = true
tempfile.workspace = true
clap.workspace = true

# QNN throughput + thermal benchmark (Phase 1.2 step 1.2.6). Device test;
# requires the `qnn` feature so `QnnBackend` is in the dep graph. Declaring
# `required-features` keeps a default `cargo build --examples` from trying
# to compile it without the feature.
[[example]]
name = "qnn_bench"
required-features = ["qnn"]

# llama.cpp throughput benchmark (Phase 1.1 bullet b). Requires the
# `llamacpp` feature so `RealLlamaEngine` is in the dep graph; the GPU
# passthrough features (`llamacpp-metal/-cuda/-vulkan`) activate it
# transitively. Measurement-first — a flagless run prints numbers and exits 0.
[[example]]
name = "llamacpp_bench"
required-features = ["llamacpp"]
