[package]
name = "primer-pedagogy"
description = "Socratic dialogue engine and pedagogical intelligence for the Primer"
version.workspace = true
edition.workspace = true

[dependencies]
primer-core.workspace = true
primer-classifier.workspace = true
primer-extractor.workspace = true
primer-comprehension.workspace = true
async-trait.workspace = true
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
primer-storage.workspace = true
# Not .workspace = true: workspace pins only env-filter; we need registry here.
tracing-subscriber = { version = "0.3", features = ["registry"] }
