[package]
name = "primer-speech"
description = "Speech-to-text and text-to-speech backends for the Primer"
version.workspace = true
edition.workspace = true

[dependencies]
primer-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Silero VAD — bundled ONNX weights, opt-in via the `silero` feature so the
# ort/ndarray dep tree only compiles for users who want VAD.
silero-vad-rust = { version = "6.2", default-features = false, optional = true }
# Pin ort to the rc that silero-vad-rust 6.2 was built against; without
# this, Cargo picks a newer rc whose bundled ndarray version diverges from
# silero-vad-rust's direct ndarray dep and the type `Array2<f32>` no
# longer matches across crates.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries", "copy-dylibs"], optional = true }

# Whisper.cpp — opt-in via the `whisper` feature. Builds bundled C++ source
# (cmake + a C++ compiler must be present on the build host).
whisper-cpp-plus = { version = "0.1", default-features = false, optional = true }

# Piper TTS — opt-in via the `piper` feature. Pulls ort + espeak-rs + riff-wave
# transitively. Watch for ort rc disagreement with silero-vad-rust 6.2 when
# both `silero` and `piper` features are enabled.
piper-rs = { version = "0.1", default-features = false, optional = true }
# Used by the piper backend to read `audio.sample_rate` from the voice
# config sidecar JSON. Optional so the default workspace build doesn't
# pull serde_json into primer-speech.
serde_json = { workspace = true, optional = true }

# Audio I/O for the unified speech REPL — opt-in via the `cpal` feature.
# cpal: cross-platform mic/speaker bindings.
# ringbuf: lock-free SPSC ring buffers for cpal callbacks.
# rubato: sample-rate conversion (mic/device → silero/whisper at 16 kHz,
# piper at voice-config rate → device output rate).
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }

# Apple Speech.framework + AVFoundation bindings — opt-in via the
# `macos-native` feature. All five are `optional = true` and the
# workspace decl uses `default-features = false`, so non-macOS builds
# compile nothing.
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-avf-audio = { workspace = true, optional = true }
objc2-speech = { workspace = true, optional = true }
block2 = { workspace = true, optional = true }

[dev-dependencies]
# WAV writer for the tts_hello example. Dev-only — not part of the
# default build dep tree.
hound = "3"
clap = { workspace = true }
# Temp files used by the piper_config unit tests (under --features piper).
tempfile = "3"

[features]
default = []
silero = ["dep:silero-vad-rust", "dep:ort"]
whisper = ["dep:whisper-cpp-plus"]
piper = ["dep:piper-rs", "dep:serde_json"]
cpal = ["dep:cpal", "dep:ringbuf", "dep:rubato"]
# Shared voice loop state machine (LISTEN → LATENT_THINK → SPEAK → LISTEN).
# Pulls every speech backend feature so the state machine can compose
# VAD → STT → DialogueManager → TTS → cpal without further conditional
# compilation in consumers. Consumed by primer-cli (--speech mode) and
# primer-gui (Voice mode toggle).
voice-loop = ["silero", "whisper", "piper", "cpal"]
# Apple Speech.framework + AVFoundation backends. macOS-only.
# Enables Speech-to-Text (SFSpeechRecognizer) and Text-to-Speech
# (AVSpeechSynthesizer) without any external system deps, model
# downloads, or ort runtime download. See docs/macos_native_speech.md.
macos-native = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-avf-audio", "dep:objc2-speech", "dep:block2"]

[[example]]
name = "tts_hello"
required-features = ["piper"]

[[example]]
name = "tts_macos_pcm_smoke"
required-features = ["macos-native"]
