[package]
name = "primer-speech"
description = "Speech-to-text and text-to-speech backends for the Primer"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
primer-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid.workspace = true

# Silero VAD — bundled ONNX weights, opt-in via the `silero` feature so the
# ort/ndarray dep tree only compiles for users who want VAD.
silero-vad-rust = { version = "6.2", default-features = false, optional = true }
# Pin ort to the rc that silero-vad-rust 6.2 was built against; without
# this, Cargo picks a newer rc whose bundled ndarray version diverges from
# silero-vad-rust's direct ndarray dep and the type `Array2<f32>` no
# longer matches across crates.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["ndarray", "download-binaries", "copy-dylibs"], optional = true }

# Whisper.cpp — opt-in via the `whisper` feature. Builds bundled C++ source
# (cmake + a C++ compiler must be present on the build host).
whisper-cpp-plus = { version = "0.1", default-features = false, optional = true }

# Piper TTS — opt-in via the `piper` feature. Pulls ort + espeak-rs + riff-wave
# transitively. Watch for ort rc disagreement with silero-vad-rust 6.2 when
# both `silero` and `piper` features are enabled.
piper-rs = { version = "0.1", default-features = false, optional = true }

# Supertonic TTS — opt-in via the `supertonic` feature. Vendored fork at
# `src/vendor/supertonic-rs/` (upstream commit 67175af; ort pinned to rc.10
# to match the rest of the workspace; upstream uses rc.7). Single
# multilingual model (en/de/hi + 28 more), no espeak-ng dep, ~400 MB asset
# footprint on first run. Library-only consumer; no [patch.crates-io]
# entry needed because supertonic-tts is not published.
supertonic-tts = { path = "../../vendor/supertonic-rs", optional = true }
# Used by the piper backend to read `audio.sample_rate` from the voice
# config sidecar JSON. Optional so the default workspace build doesn't
# pull serde_json into primer-speech.
serde_json = { workspace = true, optional = true }

# Audio I/O for the unified speech REPL — opt-in via the `cpal` feature.
# cpal: cross-platform mic/speaker bindings.
# ringbuf: lock-free SPSC ring buffers for cpal callbacks.
# rubato: sample-rate conversion (mic/device → silero/whisper at 16 kHz,
# piper at voice-config rate → device output rate).
cpal = { workspace = true, optional = true }
ringbuf = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }

# Apple Speech.framework + AVFoundation bindings — opt-in via the
# `macos-native` feature. All five are `optional = true` and the
# workspace decl uses `default-features = false`, so non-macOS builds
# compile nothing.
objc2 = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }
objc2-avf-audio = { workspace = true, optional = true }
objc2-speech = { workspace = true, optional = true }
block2 = { workspace = true, optional = true }

# Safe typed wrappers for GCD (Grand Central Dispatch). Used by the
# macOS-native TTS background-thread streaming path to bounce a one-shot
# work item onto the main queue without raw FFI to `dispatch_async_f` and
# the private `_dispatch_main_q` symbol. See issue #125.
dispatch2 = { workspace = true, optional = true }

# swift-bridge — generates the FFI between Rust and the Macos26Pipeline Swift sidecar.
# Pulled only by the `macos-native-26` feature. The build-dep is the codegen half.
# The `async` feature enables the async_swift_support module required for
# async extern "Swift" method bridges.
swift-bridge = { version = "0.1", features = ["async"], optional = true }

[build-dependencies]
swift-bridge-build = { version = "0.1", optional = true }

[dev-dependencies]
# WAV writer for the tts_hello example. Dev-only — not part of the
# default build dep tree.
hound = "3"
clap = { workspace = true }
# Temp files used by the piper_config unit tests (under --features piper).
tempfile = "3"

[features]
default = []
silero = ["dep:silero-vad-rust", "dep:ort"]
whisper = ["dep:whisper-cpp-plus"]
piper = ["dep:piper-rs", "dep:serde_json"]
# Supertonic TTS smoke gate. No primer-speech glue code lands behind this
# yet — Stage A of the evaluation just lifts the vendored library into
# the workspace dep graph and a smoke example. A real `TextToSpeech` /
# `StreamingTextToSpeech` impl arrives in a follow-up once the rc.10
# migration is empirically validated locally and an asset-flow is wired.
supertonic = ["dep:supertonic-tts"]
cpal = ["dep:cpal", "dep:ringbuf", "dep:rubato"]
# Shared voice loop state machine (LISTEN → LATENT_THINK → SPEAK → LISTEN).
# Pulls every speech backend feature so the state machine can compose
# VAD → STT → DialogueManager → TTS → cpal without further conditional
# compilation in consumers. Consumed by primer-cli (--speech mode) and
# primer-gui (Voice mode toggle).
voice-loop = ["silero", "whisper", "piper", "cpal"]
# Apple Speech.framework + AVFoundation backends. macOS-only.
# Enables Speech-to-Text (SFSpeechRecognizer) and Text-to-Speech
# (AVSpeechSynthesizer) without any external system deps, model
# downloads, or ort runtime download. See docs/macos_native_speech.md.
macos-native = ["dep:objc2", "dep:objc2-foundation", "dep:objc2-avf-audio", "dep:objc2-speech", "dep:block2", "dep:dispatch2"]
# macOS 26+ STT/VAD via SpeechAnalyzer. Swift sidecar bridged via swift-bridge.
# Mutually exclusive with macos-native — pick one.
#
# `dep:dispatch2` is shared with `macos-native` because `macos/tts.rs` (compiled
# under `any(macos-native, macos-native-26)` per the CLAUDE.md "macOS-native"
# bullet) imports `dispatch2::DispatchQueue` unconditionally for the
# background-thread AVSpeechSynthesizer path. See issue #148.
macos-native-26 = [
    "dep:swift-bridge",
    "swift-bridge-build",
    "dep:objc2",
    "dep:objc2-foundation",
    "dep:objc2-avf-audio",
    "dep:block2",
    "dep:dispatch2",
]

[[example]]
name = "tts_hello"
required-features = ["piper"]

[[example]]
name = "tts_supertonic_hello"
required-features = ["supertonic"]

[[example]]
name = "tts_macos_pcm_smoke"
required-features = ["macos-native"]

# Custom-harness integration tests for MacosTextToSpeech one-shot and
# streaming synthesis. harness = false so that the test file owns its own
# main() and therefore runs on the actual OS main thread —
# AVSpeechSynthesizer.writeUtterance:toBufferCallback: delivers PCM callbacks
# on the main thread, which requires the main thread to be running its
# NSRunLoop / GCD main queue. The standard cargo test harness spawns test
# functions on worker threads where the main queue is never drained, causing
# a 30-second timeout. This test file's main() drives a tokio
# current_thread runtime on the OS main thread so the synthesis callbacks
# can be delivered and collected.
[[test]]
name = "macos_tts"
harness = false
required-features = ["macos-native"]
