[package]
name = "primer-storage"
description = "SQLite-backed session and learner-model persistence for the Primer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
primer-core.workspace = true
async-trait.workspace = true
tokio.workspace = true
rusqlite.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
